--- a/TheLineUp/public/css/styles.css
+++ b/TheLineUp/public/css/styles.css
@@ -29,7 +29,6 @@ main {
   padding: 2rem;
   z-index: 10;
   -webkit-transform: translateY(55px);
-      -ms-transform: translateY(55px);
           transform: translateY(55px);
 }
 
@@ -73,7 +72,6 @@ main {
 @media (max-width: 992px) {
   .search-sec {
     -webkit-transform: translateY(0);
-        -ms-transform: translateY(0);
             transform: translateY(0);
     background: #f9fbfc;
   }
@@ -85,7 +83,6 @@ main {
 
 .card-container h1 {
   -webkit-transform: translateY(-45px);
-      -ms-transform: translateY(-45px);
           transform: translateY(-45px);
 }
 
@@ -274,7 +271,6 @@ main {
 
 .jumbotron.post {
   background-image: -webkit-gradient(linear, right top, left top, from(#000000), to(#7F8C8D));
-  background-image: -o-linear-gradient(right, #000000, #7F8C8D);
   background-image: linear-gradient(-90deg, #000000, #7F8C8D);
   text-align: center;
   margin: 0 auto;
@@ -290,7 +286,7 @@ main {
   padding: 0;
 }
 
-li.nav-item {
+li.nav-item.main {
   background-color: #e0004a;
 }
 
@@ -315,7 +311,6 @@ li.nav-item {
 
 .nav-link.main::before {
   -webkit-transition: 500ms;
-  -o-transition: 500ms;
   transition: 500ms;
   height: 2px;
   content: "";
@@ -363,7 +358,6 @@ a.col-md-4.gallery {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   -webkit-transition: .3s ease-in-out;
-  -o-transition: .3s ease-in-out;
   transition: .3s ease-in-out;
 }
 
@@ -502,7 +496,6 @@ input {
   -webkit-box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
           box-shadow: 2px 4px 6px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  -o-transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 
